Revert config file

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,7 +1,6 @@
 [theme]
 primaryColor = "#0077B6"
-backgroundColor = "#CAF0F8"
-secondaryBackgroundColor = "#0077B6"
+backgroundColor = "#FFFFFF"
+secondaryBackgroundColor = "#CAF0F8"
 textColor = "#31333F"
 font = "sans serif"
-
