--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,4 +3,4 @@ primaryColor = "#0077B6"
 backgroundColor = "#FFFFFF"
 secondaryBackgroundColor = "#CAF0F8"
 textColor = "#31333F"
-font = "sans serif"
+font = "monospace"
